i18n for web ui

--- a/lib/sidekiq/async_http/web_ui/locales/en.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/en.yml
@@ -3,6 +3,7 @@ en:
   async_http.title: "Async HTTP Statistics"
   async_http.total_requests: "Total Requests"
   async_http.average_duration: "Average Duration"
+  async_http.milliseconds: "ms"
   async_http.total_errors: "Total Errors"
   async_http.requests_refused: "Requests Refused"
   async_http.connection_capacity: "Connection Capacity"
