test_app improvements

--- a/lib/sidekiq/async_http/web_ui/locales/ar.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ar.yml
@@ -2,8 +2,7 @@ ar:
   async_http.tab: "HTTP غير متزامن"
   async_http.title: "إحصائيات HTTP غير المتزامنة"
   async_http.total_requests: "مجموع الطلبات"
-  async_http.average_duration: "متوسط المدة"
-  async_http.milliseconds: "مللي ثانية"
+  async_http.average_duration: "متوسط المدة (ثواني)"
   async_http.total_errors: "مجموع الأخطاء"
   async_http.requests_refused: "الطلبات المرفوضة"
   async_http.connection_capacity: "سعة الاتصال"
