--- a/lib/sidekiq/async_http/web_ui/locales/cs.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/cs.yml
@@ -2,8 +2,7 @@ cs:
   async_http.tab: "Async HTTP"
   async_http.title: "Statistiky Async HTTP"
   async_http.total_requests: "Celkem požadavků"
-  async_http.average_duration: "Průměrná doba trvání"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Průměrná doba trvání (sekundy)"
   async_http.total_errors: "Celkem chyb"
   async_http.requests_refused: "Odmítnuté požadavky"
   async_http.connection_capacity: "Kapacita připojení"
