--- a/lib/sidekiq/async_http/web_ui/locales/da.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/da.yml
@@ -2,8 +2,7 @@ da:
   async_http.tab: "Async HTTP"
   async_http.title: "Async HTTP-statistik"
   async_http.total_requests: "Samlede anmodninger"
-  async_http.average_duration: "Gennemsnitlig varighed"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Gennemsnitlig varighed (sekunder)"
   async_http.total_errors: "Samlede fejl"
   async_http.requests_refused: "Afviste anmodninger"
   async_http.connection_capacity: "Forbindelseskapacitet"
