--- a/lib/sidekiq/async_http/web_ui/locales/de.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/de.yml
@@ -2,8 +2,7 @@ de:
   async_http.tab: "Async HTTP"
   async_http.title: "Async HTTP-Statistiken"
   async_http.total_requests: "Gesamtanfragen"
-  async_http.average_duration: "Durchschnittsdauer"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Durchschnittsdauer (Sekunden)"
   async_http.total_errors: "Gesamtfehler"
   async_http.requests_refused: "Abgewiesene Anfragen"
   async_http.connection_capacity: "Verbindungskapazität"
