--- a/lib/sidekiq/async_http/web_ui/locales/el.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/el.yml
@@ -2,8 +2,7 @@ el:
   async_http.tab: "Ασύγχρονο HTTP"
   async_http.title: "Στατιστικά Ασύγχρονου HTTP"
   async_http.total_requests: "Σύνολο αιτημάτων"
-  async_http.average_duration: "Μέση διάρκεια"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Μέση διάρκεια (δευτερόλεπτα)"
   async_http.total_errors: "Σύνολο σφαλμάτων"
   async_http.requests_refused: "Αιτήματα που απορρίφθηκαν"
   async_http.connection_capacity: "Χωρητικότητα σύνδεσης"
