--- a/lib/sidekiq/async_http/web_ui/locales/es.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/es.yml
@@ -2,8 +2,7 @@ es:
   async_http.tab: "HTTP asíncrono"
   async_http.title: "Estadísticas de HTTP asíncrono"
   async_http.total_requests: "Total de solicitudes"
-  async_http.average_duration: "Duración media"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Duración media (segundos)"
   async_http.total_errors: "Total de errores"
   async_http.requests_refused: "Solicitudes rechazadas"
   async_http.connection_capacity: "Capacidad de conexión"
