--- a/lib/sidekiq/async_http/web_ui/locales/fa.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/fa.yml
@@ -2,8 +2,7 @@ fa:
   async_http.tab: "HTTP ناهمگام"
   async_http.title: "آمار HTTP ناهمگام"
   async_http.total_requests: "مجموع درخواستها"
-  async_http.average_duration: "مدت زمان میانگین"
-  async_http.milliseconds: "میلیثانیه"
+  async_http.average_duration: "مدت زمان میانگین (ثانیه)"
   async_http.total_errors: "مجموع خطاها"
   async_http.requests_refused: "درخواستهای رد شده"
   async_http.connection_capacity: "ظرفیت اتصال"
