--- a/lib/sidekiq/async_http/web_ui/locales/fr.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/fr.yml
@@ -2,8 +2,7 @@ fr:
   async_http.tab: "HTTP asynchrone"
   async_http.title: "Statistiques HTTP asynchrones"
   async_http.total_requests: "Total des requêtes"
-  async_http.average_duration: "Durée moyenne"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Durée moyenne (secondes)"
   async_http.total_errors: "Total des erreurs"
   async_http.requests_refused: "Requêtes refusées"
   async_http.connection_capacity: "Capacité de connexion"
