--- a/lib/sidekiq/async_http/web_ui/locales/gd.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/gd.yml
@@ -2,8 +2,7 @@ gd:
   async_http.tab: "Async HTTP"
   async_http.title: "Staitistig Async HTTP"
   async_http.total_requests: "Iarrtasan gu lèir"
-  async_http.average_duration: "Cuibheasachd faid"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Cuibheasachd faid (diogan)"
   async_http.total_errors: "Mearachdan gu lèir"
   async_http.requests_refused: "Iarrtasan a chaidh a dhiùltadh"
   async_http.connection_capacity: "Comas ceangail"
