--- a/lib/sidekiq/async_http/web_ui/locales/he.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/he.yml
@@ -2,8 +2,7 @@ he:
   async_http.tab: "HTTP אסינכרוני"
   async_http.title: "סטטיסטיקות HTTP אסינכרוני"
   async_http.total_requests: "סה״כ בקשות"
-  async_http.average_duration: "משך זמן ממוצע"
-  async_http.milliseconds: "מילישניות"
+  async_http.average_duration: "משך זמן ממוצע (שניות)"
   async_http.total_errors: "סה״כ שגיאות"
   async_http.requests_refused: "בקשות שנדחו"
   async_http.connection_capacity: "קיבולת חיבורים"
