--- a/lib/sidekiq/async_http/web_ui/locales/hi.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/hi.yml
@@ -2,8 +2,7 @@ hi:
   async_http.tab: "अतुल्यकालिक HTTP"
   async_http.title: "अतुल्यकालिक HTTP सांख्यिकी"
   async_http.total_requests: "कुल अनुरोध"
-  async_http.average_duration: "औसत अवधि"
-  async_http.milliseconds: "मिसे"
+  async_http.average_duration: "औसत अवधि (सेकंड)"
   async_http.total_errors: "कुल त्रुटियां"
   async_http.requests_refused: "अस्वीकृत अनुरोध"
   async_http.connection_capacity: "कनेक्शन क्षमता"
