--- a/lib/sidekiq/async_http/web_ui/locales/ja.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ja.yml
@@ -2,8 +2,7 @@ ja:
   async_http.tab: "非同期 HTTP"
   async_http.title: "非同期 HTTP 統計"
   async_http.total_requests: "総リクエスト数"
-  async_http.average_duration: "平均所要時間"
-  async_http.milliseconds: "ミリ秒"
+  async_http.average_duration: "平均所要時間（秒）"
   async_http.total_errors: "総エラー数"
   async_http.requests_refused: "拒否されたリクエスト"
   async_http.connection_capacity: "接続容量"
