--- a/lib/sidekiq/async_http/web_ui/locales/ko.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ko.yml
@@ -2,8 +2,7 @@ ko:
   async_http.tab: "비동기 HTTP"
   async_http.title: "비동기 HTTP 통계"
   async_http.total_requests: "총 요청 수"
-  async_http.average_duration: "평균 소요 시간"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "평균 소요 시간 (초)"
   async_http.total_errors: "총 오류 수"
   async_http.requests_refused: "거부된 요청"
   async_http.connection_capacity: "연결 용량"
