--- a/lib/sidekiq/async_http/web_ui/locales/lt.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/lt.yml
@@ -2,8 +2,7 @@ lt:
   async_http.tab: "Async HTTP"
   async_http.title: "Async HTTP statistika"
   async_http.total_requests: "Iš viso užklausų"
-  async_http.average_duration: "Vidutinė trukmė"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Vidutinė trukmė (sekundės)"
   async_http.total_errors: "Iš viso klaidų"
   async_http.requests_refused: "Atmestos užklausos"
   async_http.connection_capacity: "Ryšio pajėgumas"
