--- a/lib/sidekiq/async_http/web_ui/locales/nb.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/nb.yml
@@ -2,8 +2,7 @@ nb:
   async_http.tab: "Async HTTP"
   async_http.title: "Statistikk for Async HTTP"
   async_http.total_requests: "Totalt antall forespørsler"
-  async_http.average_duration: "Gjennomsnittlig varighet"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Gjennomsnittlig varighet (sekunder)"
   async_http.total_errors: "Totalt antall feil"
   async_http.requests_refused: "Avviste forespørsler"
   async_http.connection_capacity: "Tilkoblingskapasitet"
