--- a/lib/sidekiq/async_http/web_ui/locales/nl.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/nl.yml
@@ -2,8 +2,7 @@ nl:
   async_http.tab: "Async HTTP"
   async_http.title: "Async HTTP-statistieken"
   async_http.total_requests: "Totaal aantal verzoeken"
-  async_http.average_duration: "Gemiddelde duur"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Gemiddelde duur (seconden)"
   async_http.total_errors: "Totaal aantal fouten"
   async_http.requests_refused: "Geweigerde verzoeken"
   async_http.connection_capacity: "Verbindingscapaciteit"
