--- a/lib/sidekiq/async_http/web_ui/locales/pl.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/pl.yml
@@ -2,8 +2,7 @@ pl:
   async_http.tab: "Async HTTP"
   async_http.title: "Statystyki Async HTTP"
   async_http.total_requests: "Łączna liczba żądań"
-  async_http.average_duration: "Średni czas trwania"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Średni czas trwania (sekundy)"
   async_http.total_errors: "Łączna liczba błędów"
   async_http.requests_refused: "Żądania odrzucone"
   async_http.connection_capacity: "Pojemność połączeń"
