--- a/lib/sidekiq/async_http/web_ui/locales/pt-BR.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/pt-BR.yml
@@ -2,8 +2,7 @@ pt-BR:
   async_http.tab: "HTTP Assíncrono"
   async_http.title: "Estatísticas de HTTP Assíncrono"
   async_http.total_requests: "Total de Requisições"
-  async_http.average_duration: "Duração Média"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Duração Média (segundos)"
   async_http.total_errors: "Total de Erros"
   async_http.requests_refused: "Requisições Recusadas"
   async_http.connection_capacity: "Capacidade de Conexão"
