--- a/lib/sidekiq/async_http/web_ui/locales/ru.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ru.yml
@@ -2,8 +2,7 @@ ru:
   async_http.tab: "Асинхр. HTTP"
   async_http.title: "Статистика асинхр. HTTP"
   async_http.total_requests: "Всего запросов"
-  async_http.average_duration: "Средняя длительность"
-  async_http.milliseconds: "мс"
+  async_http.average_duration: "Средняя длительность (секунды)"
   async_http.total_errors: "Всего ошибок"
   async_http.requests_refused: "Отклонено запросов"
   async_http.connection_capacity: "Емкость подключений"
