--- a/lib/sidekiq/async_http/web_ui/locales/sv.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/sv.yml
@@ -2,8 +2,7 @@ sv:
   async_http.tab: "Async HTTP"
   async_http.title: "Async HTTP-statistik"
   async_http.total_requests: "Totalt antal förfrågningar"
-  async_http.average_duration: "Genomsnittlig varaktighet"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Genomsnittlig varaktighet (sekunder)"
   async_http.total_errors: "Totalt antal fel"
   async_http.requests_refused: "Avvisade förfrågningar"
   async_http.connection_capacity: "Anslutningskapacitet"
