--- a/lib/sidekiq/async_http/web_ui/locales/ta.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ta.yml
@@ -2,8 +2,7 @@ ta:
   async_http.tab: "Async HTTP"
   async_http.title: "Async HTTP புள்ளிவிவரங்கள்"
   async_http.total_requests: "மொத்தக் கோரிக்கைகள்"
-  async_http.average_duration: "சராசரி கால அளவு"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "சராசரி கால அளவு (விநாடிகள்)"
   async_http.total_errors: "மொத்தப் பிழைகள்"
   async_http.requests_refused: "நிராகரிக்கப்பட்ட கோரிக்கைகள்"
   async_http.connection_capacity: "இணைப்புக் கொள்ளளவு"
