--- a/lib/sidekiq/async_http/web_ui/locales/tr.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/tr.yml
@@ -2,8 +2,7 @@ tr:
   async_http.tab: "Asenkron HTTP"
   async_http.title: "Asenkron HTTP İstatistikleri"
   async_http.total_requests: "Toplam İstek"
-  async_http.average_duration: "Ortalama Süre"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Ortalama Süre (saniye)"
   async_http.total_errors: "Toplam Hata"
   async_http.requests_refused: "Reddedilen İstekler"
   async_http.connection_capacity: "Bağlantı Kapasitesi"
