--- a/lib/sidekiq/async_http/web_ui/locales/uk.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/uk.yml
@@ -2,8 +2,7 @@ uk:
   async_http.tab: "Асинхр. HTTP"
   async_http.title: "Статистика асинхр. HTTP"
   async_http.total_requests: "Усього запитів"
-  async_http.average_duration: "Середня тривалість"
-  async_http.milliseconds: "мс"
+  async_http.average_duration: "Середня тривалість (секунди)"
   async_http.total_errors: "Усього помилок"
   async_http.requests_refused: "Відхилені запити"
   async_http.connection_capacity: "Ємність з'єднань"
