--- a/lib/sidekiq/async_http/web_ui/locales/ur.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ur.yml
@@ -2,8 +2,7 @@ ur:
   async_http.tab: "غیر ہم وقت HTTP"
   async_http.title: "غیر ہم وقت HTTP کے اعدادوشمار"
   async_http.total_requests: "کل درخواستیں"
-  async_http.average_duration: "اوسط دورانیہ"
-  async_http.milliseconds: "ملی سیکنڈ"
+  async_http.average_duration: "اوسط دورانیہ (سیکنڈ)"
   async_http.total_errors: "کل غلطیاں"
   async_http.requests_refused: "مسترد شدہ درخواستیں"
   async_http.connection_capacity: "کنکشن کی گنجائش"
