--- a/lib/sidekiq/async_http/web_ui/locales/vi.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/vi.yml
@@ -2,8 +2,7 @@ vi:
   async_http.tab: "HTTP Bất đồng bộ"
   async_http.title: "Thống kê HTTP Bất đồng bộ"
   async_http.total_requests: "Tổng số yêu cầu"
-  async_http.average_duration: "Thời lượng trung bình"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Thời lượng trung bình (giây)"
   async_http.total_errors: "Tổng số lỗi"
   async_http.requests_refused: "Yêu cầu bị từ chối"
   async_http.connection_capacity: "Dung lượng kết nối"
