--- a/lib/sidekiq/async_http/web_ui/locales/zh-CN.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/zh-CN.yml
@@ -2,8 +2,7 @@ zh-CN:
   async_http.tab: "异步 HTTP"
   async_http.title: "异步 HTTP 统计"
   async_http.total_requests: "总请求数"
-  async_http.average_duration: "平均耗时"
-  async_http.milliseconds: "毫秒"
+  async_http.average_duration: "平均耗时（秒）"
   async_http.total_errors: "总错误数"
   async_http.requests_refused: "已拒绝的请求"
   async_http.connection_capacity: "连接容量"
