--- a/lib/sidekiq/async_http/web_ui/locales/zh-TW.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/zh-TW.yml
@@ -2,8 +2,7 @@ zh-TW:
   async_http.tab: "非同步 HTTP"
   async_http.title: "非同步 HTTP 統計"
   async_http.total_requests: "總請求數"
-  async_http.average_duration: "平均持續時間"
-  async_http.milliseconds: "毫秒"
+  async_http.average_duration: "平均持續時間（秒）"
   async_http.total_errors: "總錯誤數"
   async_http.requests_refused: "已拒絕的請求"
   async_http.connection_capacity: "連線容量"
