--- a/lib/sidekiq/async_http/web_ui/locales/it.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/it.yml
@@ -2,8 +2,7 @@ it:
   async_http.tab: "HTTP asincrono"
   async_http.title: "Statistiche HTTP asincrono"
   async_http.total_requests: "Totale richieste"
-  async_http.average_duration: "Durata media"
-  async_http.milliseconds: "ms"
+  async_http.average_duration: "Durata media (secondi)"
   async_http.total_errors: "Totale errori"
   async_http.requests_refused: "Richieste rifiutate"
   async_http.connection_capacity: "Capacità connessione"
