--- a/lib/sidekiq/async_http/web_ui/locales/fr.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/fr.yml
@@ -17,3 +17,5 @@ fr:
   async_http.inflight: "En cours"
   async_http.utilization: "Utilisation"
   async_http.no_active_processes: "Aucun processus actif"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
