--- a/lib/sidekiq/async_http/web_ui/locales/ko.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ko.yml
@@ -17,3 +17,5 @@ ko:
   async_http.inflight: "처리 중"
   async_http.utilization: "사용률"
   async_http.no_active_processes: "활성 프로세스 없음"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
