--- a/lib/sidekiq/async_http/web_ui/locales/pt.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/pt.yml
@@ -17,3 +17,5 @@ pt:
   async_http.inflight: "Em Curso"
   async_http.utilization: "Utilização"
   async_http.no_active_processes: "Sem processos ativos"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
