--- a/lib/sidekiq/async_http/web_ui/locales/tr.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/tr.yml
@@ -17,3 +17,5 @@ tr:
   async_http.inflight: "İşlemde"
   async_http.utilization: "Kullanım"
   async_http.no_active_processes: "Etkin süreç yok"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
