--- a/lib/sidekiq/async_http/web_ui/locales/uk.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/uk.yml
@@ -17,3 +17,5 @@ uk:
   async_http.inflight: "В обробці"
   async_http.utilization: "Використання"
   async_http.no_active_processes: "Немає активних процесів"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
