--- a/lib/sidekiq/async_http/web_ui/locales/ar.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ar.yml
@@ -17,3 +17,5 @@ ar:
   async_http.inflight: "قيد التنفيذ"
   async_http.utilization: "الاستغلال"
   async_http.no_active_processes: "لا توجد عمليات نشطة"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
