--- a/lib/sidekiq/async_http/web_ui/locales/cs.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/cs.yml
@@ -17,3 +17,5 @@ cs:
   async_http.inflight: "Probíhá"
   async_http.utilization: "Využití"
   async_http.no_active_processes: "Žádné aktivní procesy"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
