--- a/lib/sidekiq/async_http/web_ui/locales/da.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/da.yml
@@ -17,3 +17,5 @@ da:
   async_http.inflight: "Igangværende"
   async_http.utilization: "Udnyttelse"
   async_http.no_active_processes: "Ingen aktive processer"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
