--- a/lib/sidekiq/async_http/web_ui/locales/el.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/el.yml
@@ -17,3 +17,5 @@ el:
   async_http.inflight: "Σε εξέλιξη"
   async_http.utilization: "Χρήση"
   async_http.no_active_processes: "Καμία ενεργή διεργασία"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
