--- a/lib/sidekiq/async_http/web_ui/locales/es.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/es.yml
@@ -17,3 +17,5 @@ es:
   async_http.inflight: "En vuelo"
   async_http.utilization: "Utilización"
   async_http.no_active_processes: "No hay procesos activos"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
