--- a/lib/sidekiq/async_http/web_ui/locales/fa.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/fa.yml
@@ -17,3 +17,5 @@ fa:
   async_http.inflight: "در جریان"
   async_http.utilization: "بهرهوری"
   async_http.no_active_processes: "هیچ پردازش فعالی وجود ندارد"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
