--- a/lib/sidekiq/async_http/web_ui/locales/gd.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/gd.yml
@@ -17,3 +17,5 @@ gd:
   async_http.inflight: "Ga làimhseachadh"
   async_http.utilization: "Cleachdadh"
   async_http.no_active_processes: "Chan eil pròiseasan gnìomhach ann"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
