--- a/lib/sidekiq/async_http/web_ui/locales/he.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/he.yml
@@ -17,3 +17,5 @@ he:
   async_http.inflight: "בתהליך"
   async_http.utilization: "ניצול"
   async_http.no_active_processes: "אין תהליכים פעילים"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
