--- a/lib/sidekiq/async_http/web_ui/locales/hi.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/hi.yml
@@ -17,3 +17,5 @@ hi:
   async_http.inflight: "जारी"
   async_http.utilization: "उपयोग"
   async_http.no_active_processes: "कोई सक्रिय प्रक्रिया नहीं"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
