--- a/lib/sidekiq/async_http/web_ui/locales/lt.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/lt.yml
@@ -17,3 +17,5 @@ lt:
   async_http.inflight: "Vykdoma"
   async_http.utilization: "Išnaudojimas"
   async_http.no_active_processes: "Nėra aktyvių procesų"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
