--- a/lib/sidekiq/async_http/web_ui/locales/nb.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/nb.yml
@@ -17,3 +17,5 @@ nb:
   async_http.inflight: "Under behandling"
   async_http.utilization: "Utnyttelse"
   async_http.no_active_processes: "Ingen aktive prosesser"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
