--- a/lib/sidekiq/async_http/web_ui/locales/pl.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/pl.yml
@@ -17,3 +17,5 @@ pl:
   async_http.inflight: "W trakcie"
   async_http.utilization: "Wykorzystanie"
   async_http.no_active_processes: "Brak aktywnych procesów"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
