--- a/lib/sidekiq/async_http/web_ui/locales/ta.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ta.yml
@@ -17,3 +17,5 @@ ta:
   async_http.inflight: "செயலில்"
   async_http.utilization: "பயன்பாடு"
   async_http.no_active_processes: "செயலில் உள்ள செயல்முறைகள் இல்லை"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
