--- a/lib/sidekiq/async_http/web_ui/locales/ur.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/ur.yml
@@ -17,3 +17,5 @@ ur:
   async_http.inflight: "جاری"
   async_http.utilization: "استعمال"
   async_http.no_active_processes: "کوئی فعال عمل نہیں"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
