--- a/lib/sidekiq/async_http/web_ui/locales/vi.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/vi.yml
@@ -17,3 +17,5 @@ vi:
   async_http.inflight: "Đang xử lý"
   async_http.utilization: "Mức sử dụng"
   async_http.no_active_processes: "Không có tiến trình hoạt động"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
