--- a/lib/sidekiq/async_http/web_ui/locales/zh-CN.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/zh-CN.yml
@@ -17,3 +17,5 @@ zh-CN:
   async_http.inflight: "进行中"
   async_http.utilization: "利用率"
   async_http.no_active_processes: "无活动进程"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
