--- a/lib/sidekiq/async_http/web_ui/locales/zh-TW.yml
+++ b/lib/sidekiq/async_http/web_ui/locales/zh-TW.yml
@@ -17,3 +17,5 @@ zh-TW:
   async_http.inflight: "處理中"
   async_http.utilization: "使用率"
   async_http.no_active_processes: "無活動處理程序"
+  async_http.clear_stats: "Clear Statistics"
+  async_http.clear_confirm: "Are you sure you want to clear all statistics? This cannot be undone."
